CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (CO_FRP C)

FIND_PACKAGE (PATS REQUIRED)

IF (NOT PATS_FOUND)
	MESSAGE (FATAL_ERROR "PATS Not Found !")
ENDIF ()

set (CMAKE_C_FLAGS "-I. -I/usr/local/include -DATS_MEMALLOC_LIBC")

PATS_COMPILE (SRC coroutinelin.dats)

ADD_EXECUTABLE (coroutinelin ${SRC})
